added configuration files for all locations

--- a/inputs/placeConfigs/detroit_mi.cfg
+++ b/inputs/placeConfigs/detroit_mi.cfg
@@ -4,19 +4,41 @@ filepostfix = detroit_mi
 [TRACK]
 r1 = Detroit police
 r2 = Detroitpolice
-r3 = Detroit pd
-r4 = Detroitpd
-r5 = Detroit law
-r6 = Detroitlaw
-r7 = Detroit cop
-r8 = Detroitcop
+r3 = DETROIT POLICE
+r4 = DETROITPOLICE
+r5 = DetroitPolice
+r6 = Detroit pd
+r7 = Detroitpd
+r8 = DETROIT PD
+r9 = DETROITPD
+r10 = DetroitPd
+r11 = Detroit law
+r12 = Detroitlaw
+r13 = DETROIT LAW
+r14 = DETROITLAW
+r15 = DetroitLaw
+r16 = Detroit cop
+r17 = Detroitcop
+r18 = DETROIT COP
+r19 = DETROITCOP
+r20 = DetroitCop
+r21 = Detroit laws
+r22 = Detroitlaws
+r23 = DETROIT LAWS
+r24 = DETROITLAWS
+r25 = DetroitLaws
+r26 = Detroit cops
+r27 = Detroitcops
+r28 = DETROIT COPS
+r29 = DETROITCOPS
+r30 = DetroitCops
 
 [LOCATIONS]
 loc1 = -83.400165
-loc2 = 42.570363
+loc2 = 42.222532
 loc3 = -82.873412
-loc4 = 42.222532
+loc4 = 42.570363
 
 [DATE]
-date = 2018-03-01T00:11:36.882584
+date = 2018-03-01T20:02:23.029211
 
