--- a/inputs/placeConfigs/richland_sc.cfg
+++ b/inputs/placeConfigs/richland_sc.cfg
@@ -4,19 +4,41 @@ filepostfix = richland_sc
 [TRACK]
 r1 = Richland police
 r2 = Richlandpolice
-r3 = Richland pd
-r4 = Richlandpd
-r5 = Richland law
-r6 = Richlandlaw
-r7 = Richland cop
-r8 = Richlandcop
+r3 = RICHLAND POLICE
+r4 = RICHLANDPOLICE
+r5 = RichlandPolice
+r6 = Richland pd
+r7 = Richlandpd
+r8 = RICHLAND PD
+r9 = RICHLANDPD
+r10 = RichlandPd
+r11 = Richland law
+r12 = Richlandlaw
+r13 = RICHLAND LAW
+r14 = RICHLANDLAW
+r15 = RichlandLaw
+r16 = Richland cop
+r17 = Richlandcop
+r18 = RICHLAND COP
+r19 = RICHLANDCOP
+r20 = RichlandCop
+r21 = Richland laws
+r22 = Richlandlaws
+r23 = RICHLAND LAWS
+r24 = RICHLANDLAWS
+r25 = RichlandLaws
+r26 = Richland cops
+r27 = Richlandcops
+r28 = RICHLAND COPS
+r29 = RICHLANDCOPS
+r30 = RichlandCops
 
 [LOCATIONS]
 loc1 = -81.389102
-loc2 = 34.260967
+loc2 = 33.75143
 loc3 = -80.568427
-loc4 = 33.75143
+loc4 = 34.260967
 
 [DATE]
-date = 2018-03-01T00:11:36.880293
+date = 2018-03-01T20:02:22.962935
 
