--- a/inputs/placeConfigs/santa_clara_ca.cfg
+++ b/inputs/placeConfigs/santa_clara_ca.cfg
@@ -4,19 +4,41 @@ filepostfix = santa_clara_ca
 [TRACK]
 r1 = Santa Clara police
 r2 = Santa Clarapolice
-r3 = Santa Clara pd
-r4 = Santa Clarapd
-r5 = Santa Clara law
-r6 = Santa Claralaw
-r7 = Santa Clara cop
-r8 = Santa Claracop
+r3 = SANTA CLARA POLICE
+r4 = SANTA CLARAPOLICE
+r5 = Santa ClaraPolice
+r6 = Santa Clara pd
+r7 = Santa Clarapd
+r8 = SANTA CLARA PD
+r9 = SANTA CLARAPD
+r10 = Santa ClaraPd
+r11 = Santa Clara law
+r12 = Santa Claralaw
+r13 = SANTA CLARA LAW
+r14 = SANTA CLARALAW
+r15 = Santa ClaraLaw
+r16 = Santa Clara cop
+r17 = Santa Claracop
+r18 = SANTA CLARA COP
+r19 = SANTA CLARACOP
+r20 = Santa ClaraCop
+r21 = Santa Clara laws
+r22 = Santa Claralaws
+r23 = SANTA CLARA LAWS
+r24 = SANTA CLARALAWS
+r25 = Santa ClaraLaws
+r26 = Santa Clara cops
+r27 = Santa Claracops
+r28 = SANTA CLARA COPS
+r29 = SANTA CLARACOPS
+r30 = Santa ClaraCops
 
 [LOCATIONS]
 loc1 = -122.027937
-loc2 = 37.424878
+loc2 = 37.31364
 loc3 = -121.922101
-loc4 = 37.31364
+loc4 = 37.424878
 
 [DATE]
-date = 2018-03-01T00:11:36.888339
+date = 2018-03-01T20:02:23.047521
 
