--- a/inputs/placeConfigs/winnebago_wi.cfg
+++ b/inputs/placeConfigs/winnebago_wi.cfg
@@ -4,19 +4,41 @@ filepostfix = winnebago_wi
 [TRACK]
 r1 = Winnebago police
 r2 = Winnebagopolice
-r3 = Winnebago pd
-r4 = Winnebagopd
-r5 = Winnebago law
-r6 = Winnebagolaw
-r7 = Winnebago cop
-r8 = Winnebagocop
+r3 = WINNEBAGO POLICE
+r4 = WINNEBAGOPOLICE
+r5 = WinnebagoPolice
+r6 = Winnebago pd
+r7 = Winnebagopd
+r8 = WINNEBAGO PD
+r9 = WINNEBAGOPD
+r10 = WinnebagoPd
+r11 = Winnebago law
+r12 = Winnebagolaw
+r13 = WINNEBAGO LAW
+r14 = WINNEBAGOLAW
+r15 = WinnebagoLaw
+r16 = Winnebago cop
+r17 = Winnebagocop
+r18 = WINNEBAGO COP
+r19 = WINNEBAGOCOP
+r20 = WinnebagoCop
+r21 = Winnebago laws
+r22 = Winnebagolaws
+r23 = WINNEBAGO LAWS
+r24 = WINNEBAGOLAWS
+r25 = WinnebagoLaws
+r26 = Winnebago cops
+r27 = Winnebagocops
+r28 = WINNEBAGO COPS
+r29 = WINNEBAGOCOPS
+r30 = WinnebagoCops
 
 [LOCATIONS]
 loc1 = -88.901814
-loc2 = 44.255881
+loc2 = 43.880343
 loc3 = -88.397991
-loc4 = 43.880343
+loc4 = 44.255881
 
 [DATE]
-date = 2018-03-01T00:11:36.881305
+date = 2018-03-01T20:02:23.020406
 
