--- a/inputs/placeConfigs/baltimore_md.cfg
+++ b/inputs/placeConfigs/baltimore_md.cfg
@@ -4,27 +4,41 @@ filepostfix = baltimore_md
 [TRACK]
 r1 = Baltimore police
 r2 = Baltimorepolice
-r3 = Baltimore pd
-r4 = Baltimorepd
-r5 = Baltimore law
-r6 = Baltimorelaw
-r7 = Baltimore cop
-r8 = Baltimorecop
-r9 = NY police
-r10 = NYpolice
-r11 = NY pd
-r12 = NYpd
-r13 = NY law
-r14 = NYlaw
-r15 = NY cop
-r16 = NYcop
+r3 = BALTIMORE POLICE
+r4 = BALTIMOREPOLICE
+r5 = BaltimorePolice
+r6 = Baltimore pd
+r7 = Baltimorepd
+r8 = BALTIMORE PD
+r9 = BALTIMOREPD
+r10 = BaltimorePd
+r11 = Baltimore law
+r12 = Baltimorelaw
+r13 = BALTIMORE LAW
+r14 = BALTIMORELAW
+r15 = BaltimoreLaw
+r16 = Baltimore cop
+r17 = Baltimorecop
+r18 = BALTIMORE COP
+r19 = BALTIMORECOP
+r20 = BaltimoreCop
+r21 = Baltimore laws
+r22 = Baltimorelaws
+r23 = BALTIMORE LAWS
+r24 = BALTIMORELAWS
+r25 = BaltimoreLaws
+r26 = Baltimore cops
+r27 = Baltimorecops
+r28 = BALTIMORE COPS
+r29 = BALTIMORECOPS
+r30 = BaltimoreCops
 
 [LOCATIONS]
 loc1 = -76.770649
-loc2 = 39.414438
+loc2 = 39.190476
 loc3 = -76.487698
-loc4 = 39.190476
+loc4 = 39.414438
 
 [DATE]
-date = 2018-03-01T00:11:36.883327
+date = 2018-03-01T20:02:22.969752
 
