--- a/inputs/placeConfigs/duval_fl.cfg
+++ b/inputs/placeConfigs/duval_fl.cfg
@@ -4,19 +4,41 @@ filepostfix = duval_fl
 [TRACK]
 r1 = Duval police
 r2 = Duvalpolice
-r3 = Duval pd
-r4 = Duvalpd
-r5 = Duval law
-r6 = Duvallaw
-r7 = Duval cop
-r8 = Duvalcop
+r3 = DUVAL POLICE
+r4 = DUVALPOLICE
+r5 = DuvalPolice
+r6 = Duval pd
+r7 = Duvalpd
+r8 = DUVAL PD
+r9 = DUVALPD
+r10 = DuvalPd
+r11 = Duval law
+r12 = Duvallaw
+r13 = DUVAL LAW
+r14 = DUVALLAW
+r15 = DuvalLaw
+r16 = Duval cop
+r17 = Duvalcop
+r18 = DUVAL COP
+r19 = DUVALCOP
+r20 = DuvalCop
+r21 = Duval laws
+r22 = Duvallaws
+r23 = DUVAL LAWS
+r24 = DUVALLAWS
+r25 = DuvalLaws
+r26 = Duval cops
+r27 = Duvalcops
+r28 = DUVAL COPS
+r29 = DUVALCOPS
+r30 = DuvalCops
 
 [LOCATIONS]
 loc1 = -82.076054
-loc2 = 30.621692
+loc2 = 30.090064
 loc3 = -81.324093
-loc4 = 30.090064
+loc4 = 30.621692
 
 [DATE]
-date = 2018-03-01T00:11:36.885507
+date = 2018-03-01T20:02:22.982908
 
