--- a/inputs/placeConfigs/rockland_ny.cfg
+++ b/inputs/placeConfigs/rockland_ny.cfg
@@ -4,19 +4,41 @@ filepostfix = rockland_ny
 [TRACK]
 r1 = Rockland police
 r2 = Rocklandpolice
-r3 = Rockland pd
-r4 = Rocklandpd
-r5 = Rockland law
-r6 = Rocklandlaw
-r7 = Rockland cop
-r8 = Rocklandcop
+r3 = ROCKLAND POLICE
+r4 = ROCKLANDPOLICE
+r5 = RocklandPolice
+r6 = Rockland pd
+r7 = Rocklandpd
+r8 = ROCKLAND PD
+r9 = ROCKLANDPD
+r10 = RocklandPd
+r11 = Rockland law
+r12 = Rocklandlaw
+r13 = ROCKLAND LAW
+r14 = ROCKLANDLAW
+r15 = RocklandLaw
+r16 = Rockland cop
+r17 = Rocklandcop
+r18 = ROCKLAND COP
+r19 = ROCKLANDCOP
+r20 = RocklandCop
+r21 = Rockland laws
+r22 = Rocklandlaws
+r23 = ROCKLAND LAWS
+r24 = ROCKLANDLAWS
+r25 = RocklandLaws
+r26 = Rockland cops
+r27 = Rocklandcops
+r28 = ROCKLAND COPS
+r29 = ROCKLANDCOPS
+r30 = RocklandCops
 
 [LOCATIONS]
 loc1 = -74.269744
-loc2 = 41.326738
+loc2 = 40.995225
 loc3 = -73.892241
-loc4 = 40.995225
+loc4 = 41.326738
 
 [DATE]
-date = 2018-03-01T00:11:36.886131
+date = 2018-03-01T20:02:22.990989
 
